- Using negative speed values now results in an instant toggle (so no animations). Example: "/ToggleDoor 42 -1.0" to instantly toggle a door with ID 42. Thanks, @Keifranien for the suggestion!
- Updated the resource pack for version 1.15 of Minecraft. Additionally, the config now uses a boolean value instead of an URL. Thanks, @wjtonline for the report!

Alpha 0.1.8.15
- Added "/shadowtoggledoor <doorName/doorUID>" (permission: bigdoors.admin.shadowtoggledoor) command to toggle a door purely in the database (no blocks will be moved). This can be used to fix a desync issue. It should only be used as a last resort!
- Added support for 1.15.

Alpha 0.1.8.14
- Fixed materials in 1.12. Thanks, @GameFire99 for the bug report!
- Updated to JCalculator 1.6 (for the price formulas in the config), fixing issues with exponentiation and adding some more operators. 

Alpha 0.1.8.13
- Added support for Towny. Thanks, @Onions for the suggestion!
- Fixed incorrect handling of the doorSize limit in the config and the permissions. Thanks, @Onions for the bug report!
- Fixed sliding doors not respecting protection plugins in some cases.
- Before moving, doors will now check if the owner is allowed to break the blocks in the old location as well (not just the new location).
- When a door exceeds either the personal door size limit of the owner or player that activated the door, or the global limit, it cannot be toggled anymore. (it used to only skip the animiation).
- Removed the "bigdoors.admin.ignoreownership" permission node. This is replaced by the new node: "bigdoors.admin.bypass.<attribute>". The attributes are: "lock", "toggle", "info", "delete", "relocatepowerblock", "changetime", "blockstomove", "direction", "addowner", and "removeowner".
- Fixed error thrown by TimedCache. Thanks, @Sneaky_42 for the bug report!
- Added material blacklist to the config.
- Fixed GUI buttons in 1.11. Thanks, @HakanUnsalP for the bug report!