@@ -5,6 +5,8 @@ Alpha 0.1.8.16
 - Added support for "Lands" (the land claim plugin). Thanks, @serhanekmekci for the request!
 - Using negative speed values now results in an instant toggle (so no animations). Example: "/ToggleDoor 42 -1.0" to instantly toggle a door with ID 42. Thanks, @Keifranien for the suggestion!
 - Updated the resource pack for version 1.15 of Minecraft. Additionally, the config now uses a boolean value instead of an URL. Thanks, @wjtonline for the report!
+- Added BELL to the material blacklist by default to avoid duplication. Thanks, @Achaius for the report!
+- Added whitelist option to the config to override the hardcoded blacklist (as well as the blacklist config option). Also sped up material blacklist checking a bit.
 
 Alpha 0.1.8.15
 - Added "/shadowtoggledoor <doorName/doorUID>" (permission: bigdoors.admin.shadowtoggledoor) command to toggle a door purely in the database (no blocks will be moved). This can be used to fix a desync issue. It should only be used as a last resort!
